--- a/ImageSegmentation/app/build.gradle
+++ b/ImageSegmentation/app/build.gradle
@@ -8,13 +8,12 @@ repositories {
 
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion 32
 
     defaultConfig {
         applicationId "org.pytorch.demo.imagesegmentation"
-        minSdkVersion 28
-        targetSdkVersion 30
+        minSdkVersion 29
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
 
@@ -24,17 +23,22 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            signingConfig signingConfigs.debug
         }
     }
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'org.pytorch:pytorch_android_lite:1.10.0'
-    implementation 'org.pytorch:pytorch_android_torchvision_lite:1.10.0'
+    implementation 'org.pytorch:pytorch_android_lite:1.11'
+    implementation 'org.pytorch:pytorch_android_torchvision_lite:1.11'
+//    implementation 'org.pytorch:pytorch_android_lite:1.13.0-SNAPSHOT'
+//    implementation 'org.pytorch:pytorch_android_torchvision_lite:1.13.0-SNAPSHOT'
+//    implementation(name:'pytorch_android-release', ext:'aar')
+//    implementation(name:'pytorch_android_torchvision-release', ext:'aar')
 }
